# pga

./: .gitignore  Cargo.toml  README.md  check.sh  run.sh
examples/: pga3d.rs
generate/: Cargo.toml
generate/examples/: pga2d.rs
generate/src/: blade.rs  generator.rs  grammar.rs  lib.rs  main.rs  multivec.rs  sign.rs  signed_blade.rs  symbolic.rs  traits.rs
generator/: Cargo.toml
generator/src/: blade.rs  documentation.rs  explicit.rs  expr.rs  gen.rs  grammars.rs  lib.rs  main.rs  markdown.rs  rust.rs  sblade.rs  simplify.rs  typ.rs  types.rs  typify.rs
generator/templates/: lib.rs  traits.rs
generator/tests/: test.rs
pga/src/: lib.rs  main.rs  manual_pga2d.rs  pga2d.rs
reference/: Cargo.toml
src/: lib.rs  pga2d.rs
symbolic/: Cargo.toml
symbolic/src/: blade.rs  expr.rs  lib.rs  main.rs  op.rs  rust.rs  sblade.rs  simplify.rs  typ.rs  types.rs  typify.rs
