[package]
name = "symbolic"
version = "0.1.0"
authors = ["Emil Ernerfeldt <emilernerfeldt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
indexmap = "1"
itertools = "0.8"
strum = "0.18"
strum_macros = "0.18"
